--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "Template Node JS common js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "reset:migrate": "node src/tests/resetDatabase.js",
+    "pretest": "npm run reset:migrate",
+    "test": "jest --detectOpenHandles",
+    "posttest": "node src/tests/postTest.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +25,8 @@
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "jest": "29.7.0",
+    "nodemon": "^3.1.4",
+    "supertest": "7.0.0"
   }
 }
